# qubes-desktop-linux-kde

./: .gitignore  .gitlab-ci.yml  .qubesbuilder  .travis.yml  10-qubes.js  11-qubes.js  CREDITS  FullRepresentation.qml  Makefile  Makefile.builder  Makefile.common  build-deps.list  kde-panel-layout.patch  kde-settings-qubes.spec.in  kickoffrc  kscreensaverrc  kwinrc  plasma-org.kde.plasma.desktop-appletsrc  qubes-generate-color-palette  qubes-kde-dom0.spec  qubes-kde-dom0.spec.in  qubes-systray.js
applications/: org.kde.knetattach.desktop
config/: 10-gui-daemon-shmoverride.conf
kde-baseapps/: Makefile  kde-baseapps-16.08.3-qubes.patch  kde-baseapps-4.12-qubes.patch  kde-baseapps-4.9-qubes.patch  kde-baseapps.spec  kdebase-4.1.80-nsplugins-paths.patch  kdebase-4.2.1-home-icon.patch  sources-15.12.3  sources-16.08.3  sources-4.12.3  sources-4.9.5
kde-filesystem/: Makefile  kde-filesystem.spec  macros.kde4
kde-settings/: 10-qubes.js  Makefile  disable-klipper.patch  disable-nepomuk.patch  hide-kde-help.patch  hide-knetattach.patch  hide-thunar.patch  kde-settings-4.4.3-1.tar.bz2  kde-settings-4.4.5-Xorg-1.10.patch  kde-settings-4.4.5-plastik-for-qubes.patch  kde-settings-4.9-plastik-for-qubes.patch  kde-settings.spec  kde-settings.tar.bz2  kdm-disable-switch-user.patch  kdm-settings.patch  kickoff-hide-computer-tab.patch  qubes-menus-prefix.patch  qubes-systray.js  sources-23  sources-25  sources-4.9  start-here-icon.patch
kdebase/: Makefile  kdebase-4.4.3-qubes-cleanup.patch  kdebase.spec  sources-4.4.3  sources-4.4.5
kdebase-runtime/: Makefile  kdebase-runtime-4.4.3-qubes-cleanup.patch  kdebase-runtime.spec  sources-4.4.3  sources-4.4.5
kdebase-workspace/: Makefile  kdebase-workspace-4.1.96-font.patch  kdebase-workspace-4.2.0-pykde4.patch  kdebase-workspace-4.3.75-rootprivs.patch  kdebase-workspace-4.3.80-xsession_errors_O_APPEND.patch  kdebase-workspace-4.4.3-plastik-for-qubes.patch  kdebase-workspace-4.4.3-qubes-cleanup.patch  kdebase-workspace-4.4.5-qubes-cleanup.patch  kdebase-workspace.spec  sources-4.4.3  sources-4.4.5
kdegraphics/: Makefile  kdegraphics-4.4.5-qubes-cleanup.patch  kdegraphics.spec  sources-4.4.5
kdelibs/: Makefile  kde4.csh  kde4.sh  kdelibs-4.1.70-cmake.patch  (+9 more)
plastik-for-qubes/: CMakeLists.txt  Makefile  kde-style-plastik-for-qubes.spec  plastik.desktop  plastik.h  plastikbutton.h  plastikclient.cpp  plastikclient.h  qubeslabels.cpp
plastik-for-qubes/kwin-client/: CMakeLists.txt  plastik.cpp  plastik_for_qubes.desktop  plastikbutton.cpp  plastikclient.cpp  qubeslabels.h
plastik-for-qubes/kwin-client/config/: CMakeLists.txt  config.cpp
(+56 files in other folders)
